# wallet_rs

./: .eslintrc.yml  .gitignore  Cargo.toml  README.md  index.d.ts  index.js  package-lock.json  package.json  tsconfig.json  wallet-test.js  wallet-test.ts
.cargo/: config.toml
.github/workflows/: CI.yaml
__test__/: index.spec.ts
benchmark/: bench.ts
npm/android-arm64/: README.md  package.json
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/freebsd-x64/: README.md  package.json
npm/linux-arm-gnueabihf/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-arm64-musl/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-ia32-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: didcomm.rs  lib.rs
test/: didcomm.test.ts  fixture.ts  utils.ts  wallet.test.ts
ts/: bindings.ts  types.ts  wallet.ts
